--- a/assets/img/css/style.css
+++ b/assets/img/css/style.css
@@ -107,7 +107,25 @@ img {
     height: auto;
 }
 
+
+
 /* ============== REUSABLE CSS CLASSES ============== */
+.section {
+    padding: 4rem 0 2rem;
+}
+
+.section__title {
+    font-size: var(--bigger-font-size);
+    text-align: center;
+    margin-bottom: var(--mb-2-5);
+}
+
+.section__title-gradient {
+    background: var(--text-gradient);
+    color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+}
 
 /* ================= LAYOUT ================== */
 
