--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,3 +278,25 @@ img {
 }
 
 /* ================= BUTTONS ================ */
+.button {
+    display: inline-block;
+    background-color: var(--black-color);
+    color:var(--white-color);
+    padding: 1rem 1.25rem;
+    border-radius: .5rem;
+    transition: .3s;
+}
+
+.button:hover {
+    background-color: var(--black-color-alt);
+}
+
+.button__icon {
+    font-size: 1.2rem
+}
+
+.button--flex {
+    display: inline-flex;
+    align-items: center;
+    column-gap: .75rem;
+}
