Added main menu link highlight when scrolling over it's destination section.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,6 +232,9 @@ img {
 }
 
 /* Active link */
+.active-link {
+    color: var(--white-color);
+}
 
 /* ================== HOME ================== */
 .home__img {
