--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,5 +566,18 @@ img {
 /* Show scroll Up */
 
 /* ================= SCROLL BAR ================ */
+::-webkit-scrollbar {
+    width: 0.6rem;
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--scroll-thumb-color);
+    border-radius: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: var(--scroll-thumb-color-alt);
+}
 
 /* =============== MEDIA QUERIES =============== */
