--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -689,4 +689,103 @@ img {
   }
 }
 
+
+@media screen and (min-width: 767px) {
+  body {
+    margin: 0;
+  }
+
+  .section {
+    padding: 6rem 0 2rem;
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
+  }
+
+  .nav__logo {
+    width: 2rem;
+  }
+
+  .nav__list {
+    flex-direction: row;
+    column-gap: 3.5rem;
+  }
+
+  .nav__link {
+    font-size: var(--normal-font-size);
+    text-transform: initial;
+  }
+
+  .nav__toggle,
+  .nav__close {
+    display: none;
+  }
+
+  .home__container {
+    position:relative;
+    grid-template-columns: repeat (2, 1fr);
+  }
+
+  .home__img {
+    top: -9rem;
+    left: 4rem;
+  }
+
+  .home__data {
+    padding-top: 8rem;
+  }
+
+  .specs__img {
+    width: 300px;
+  }
+
+  .case__container {
+    column-gap: 5rem;
+  }
+
+  .case__img {
+    width: 300px;
+  }
+
+  .case__description {
+    margin-bottom: var(--mb-2);
+  }
+
+  .discount__container {
+    grid-template-columns: 250px max-content;
+    justify-content: center;
+    column-gap: 5rem;
+    align-items: center;
+  }
+
+  .discount__title {
+    font-size: var(--h2-font-size);
+    margin-bottom: var(--mb-1);
+  }
+
+  .discount__description {
+    margin-bottom: var(--mb-2);
+  }
+
+  .products__container {
+    grid-template-columns: repeat(3, 162px);
+    gap: 6rem 3rem;
+    padding-top: 5rem;
+  }
+
+  .products__card {
+    height: 152px;
+    padding: .85rem;
+  }
+
+  .products__img {
+    width: 95px;
+  }
+
+  .footer__container {
+    grid-template-columns: .4fr .7fr .7fr 1fr;
+  }
+
+}
 /* For large devices */
